<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/background"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/moments2"/>

    <ImageView
        android:layout_width="75dip"
        android:layout_height="100dip"
        android:id="@+id/img_user"
        android:src="@android:drawable/sym_def_app_icon"
        android:contentDescription="User's picture"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:text="name"
        android:textSize="@dimen/text_mmenu"
        android:textColor="#FFFFFF"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@id/img_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_account"
        android:id="@+id/tv_account"
        android:textSize="@dimen/text_mmenu"
        android:textColor="@color/textLink"
        android:layout_below="@+id/img_user"
        android:layout_alignRight="@+id/img_user"
        android:layout_alignEnd="@+id/img_user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        android:id="@+id/tv_disconnect"
        android:textSize="@dimen/text_mmenu"
        android:textColor="@color/textLink"
        android:layout_below="@+id/tv_account"
        android:layout_alignRight="@+id/img_user"
        android:layout_alignEnd="@+id/img_user"
        android:layout_marginTop="5dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/lv_friendsList"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:hint="@string/searchFriend"
        android:id="@+id/tv_searchFriend"
        android:background="@drawable/rounded_edit_text"
        android:layout_below="@+id/lv_friendsList"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:gravity="center" />

    <Button
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:text="@string/addFriend"
        android:id="@+id/btn_addFriend"
        android:background="@drawable/rounded_button"
        android:layout_below="@+id/lv_friendsList"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="320dp"/>
</RelativeLayout>